# SwimSmart

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  swimsmart.db
swimsmart/: auth.py  crud.py  db.py  models.py  schemas.py  seed.py  services.py
swimsmart.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
swimsmart/api/: authz.py  deps.py  errors.py  main.py  schemas.py
swimsmart/api/routes/: auth.py  coach.py  exports.py  me.py  sessions.py  system.py
tests/: conftest.py  smoketestd5.py  test_api_day7.py  test_api_day8.py  test_crud.py  test_crud_day6.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day9.py  test_models.py  test_schemas.py  test_services.py  test_services_day5.py
