[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swimsmart"
version = "0.1.0"
description = "Swim training log"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ross Burns"}]

dependencies = [
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "passlib[bcrypt]>=1.7",  
    "PyJWT>=2.8",  
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["swimsmart*"] } }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]