[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swimsmart"
version = "0.1.0"
description = "Swim training log"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ross Burns"}]

dependencies = [
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30.1",
    "passlib>=1.7,<1.8",
    "bcrypt==3.2.2", 
    "PyJWT>=2.8",
    "email-validator>=2.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0",
    "alembic>=1.13"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["swimsmart*"] } }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]